--- a/access_biodiversity_data/introduction_and_tutorials/tutorial_2.ipynb
+++ b/access_biodiversity_data/introduction_and_tutorials/tutorial_2.ipynb
@@ -1703,7 +1703,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Assignment\n",
+    "## Assignment 1\n",
     "\n",
     "Now where you have a basic overview over the use of the `rgbif`, `rredlist`, and `taxize` packages, you are ready to approach a bioinformatic task based on biodiversity data:\n",
     "\n",
@@ -1727,6 +1727,33 @@
     "5. retrieve a species list of the family `Felidae`, using the `taxize` package\n",
     "6. get the IUCN RedList status for each species, using the `rredlist::rl_search()` function"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Assignment 2\n",
+    "\n",
+    "For the very fast and motivated people among you:\n",
+    "\n",
+    "You are being asked to produce a map that contains the range map (according to IUCN) and all occurrences (according to GBIF) for the African elephant. For this purpose you need to download the actual range data from IUCN, which can only be downloaded as a big data-package, containing ranges of all mammal species ([download here](https://www.iucnredlist.org/resources/files/bcfb6dac-60e6-4f0e-a027-02df540e512e)).\n",
+    "\n",
+    "This task requires you to know some basics about reading and plotting shape data, which we covered in a previous workshop. Check out the [online module of that workshop](https://github.com/tobiashofmann88/workshops/tree/master/spatial_r_workshop/introduction_and_tutorials) in case you are stuck."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
