--- a/access_biodiversity_data/introduction_and_tutorials/tutorial_1.ipynb
+++ b/access_biodiversity_data/introduction_and_tutorials/tutorial_1.ipynb
@@ -1367,7 +1367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is usually a good idea to **crop the world map** to the area where our points are occurring. So let's first define the counding box to plot by finding the min and max geographic extent of our data, plus some additional buffer, so that points are not at the edges of the plot:"
+    "It is usually a good idea to **crop the world map** to the area where our points are occurring. So let's first define the bounding box to plot by finding the min and max geographic extent of our data, plus some additional buffer, so that points are not at the edges of the plot:"
    ]
   },
   {
@@ -1389,7 +1389,7 @@
    "source": [
     "Now let's plot our points on the map, colored by species name.\n",
     "\n",
-    "We will plot using the `ggplot()` function. The logic of the `ggplot` syntax is accumulative. That means you can add additonal layers/settigns to the command by adding lines connnected with a `+` sign.\n",
+    "We will plot using the `ggplot()` function. The logic of the `ggplot` syntax is accumulative. That means you can add additonal layers/settings to the command by adding lines connnected with a `+` sign.\n",
     "\n",
     "First we just call the function `ggplot()`, then tell it to plot our `map_world` object we created above, then add the data points (`records`) using the `geom_point()` function, then crop the map around the borders (`xmin,xmax,ymin,ymax`) defined in the previous step (based on the spread of the data), and finally we add a legend using the `theme()` command."
    ]
@@ -1802,6 +1802,13 @@
    "source": [
     "![image](./map_leaflet.png)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
