--- a/access_biodiversity_data/introduction_and_tutorials/tutorial_2.ipynb
+++ b/access_biodiversity_data/introduction_and_tutorials/tutorial_2.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iucn_api = 'paste_your_api_here'"
+    "iucn_api = '01524b67f4972521acd1ded2d8b3858e7fedc7da5fd75b8bb2c5456ea18b01ba'"
    ]
   },
   {
