added advance python tutorial

--- a/python_workshop/introduction_and_tutorials/tutorial_1.ipynb
+++ b/python_workshop/introduction_and_tutorials/tutorial_1.ipynb
@@ -8,6 +8,7 @@
     "\n",
     "## Tutorial Intro --> Basic Python syntax and objects\n",
     "\n",
+    "*by Tobias Andermann*\n",
     "________________________"
    ]
   },
@@ -242,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Print the last 6 characters of the string"
+    "Print the last 8 characters of the string"
    ]
   },
   {
