--- a/python_workshop/introduction_and_tutorials/tutorial_2.ipynb
+++ b/python_workshop/introduction_and_tutorials/tutorial_2.ipynb
@@ -8,6 +8,8 @@
     "\n",
     "## Tutorial A --> Change DNA alignment format\n",
     "\n",
+    "*by Tobias Andermann*\n",
+    "\n",
     "In this tutorial you will produce a python program which reads a DNA sequence alignment, changes the format of this alignment (into a user-provided format), and writes it to a new alignment file. You will be able to call this program from the bash command line and can thus easily up-scale it by looping over many alignment files."
    ]
   },
