--- a/python_workshop/introduction_and_tutorials/tutorial_3.ipynb
+++ b/python_workshop/introduction_and_tutorials/tutorial_3.ipynb
@@ -8,6 +8,8 @@
     "\n",
     "## Tutorial B --> Read, process, and plot biological data (tabular format) \n",
     "\n",
+    "*by Tobias Andermann*\n",
+    "\n",
     "In this tutorial you learn how to read data frames with python and how to select, transform, analyze, and plot the data.\n",
     "You can find a data file named `petal_sepal_length.txt` in the tutorial folder. This file contains the measured lengths of petals and sepals of 50 individuals of the plant species `Iris pythonica` (fake data). All individuals are classified as the same species and we want to test if we can find any clustering of these characters or if they are continuously distributed. Some of the following steps are not necessary for this purpose but are meant to provide some useful commands whihc can be used in many different situations."
    ]
