--- a/advanced_python/introduction_and_tutorials/tutorial_1_numpy_intro.ipynb
+++ b/advanced_python/introduction_and_tutorials/tutorial_1_numpy_intro.ipynb
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -368,13 +368,14 @@
        "array([0.        , 0.30103   , 0.47712125, 0.60205999])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# log with base 10\n",
+    "b = np.array([1,2,3,4])\n",
     "np.log10(b)"
    ]
   },
@@ -491,31 +492,8 @@
     }
    ],
    "source": [
-    "# Creates a 2x3x4 array of int 1's\n",
+    "# Creates a 3x4 array of int 1's\n",
     "np.ones((3,4)) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0.]])"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Creates an empty 2x3 array\n",
-    "np.empty((3,4))"
    ]
   },
   {
