fixed bugs in tutorials

--- a/advanced_python/introduction_and_tutorials/tutorial_1_numpy_intro.ipynb
+++ b/advanced_python/introduction_and_tutorials/tutorial_1_numpy_intro.ipynb
@@ -847,7 +847,18 @@
     "\n",
     "Python in general, but numpy particularly, makes the subselection of parts of the array rather simple and straight forward (much easier than in R for example).\n",
     "\n",
-    "You take a selection of an array by stating the index you are interested in. For example if I want to print the 4th value of an array:"
+    "You take a selection of an array by stating the index you are interested in. Remember that python starts counting with index 0.\n",
+    "\n",
+    "To demonstrate the python index logic look at the following example:\n",
+    "```\n",
+    "array/list:       [10 , 20 , 30 , 40 , 50]\n",
+    "\n",
+    "python index:     [0], [1], [2], [3], [4]\n",
+    "\n",
+    "\"human\" language: 1st, 2nd, 3rd, 4th, 5th element of array\n",
+    "```\n",
+    "\n",
+    "For example if I want to print the 5th value of an array:"
    ]
   },
   {
@@ -1246,7 +1257,7 @@
    "source": [
     "You see that the values are sampled with equal probability from across the defined range. Let's try a different distibution.\n",
     "\n",
-    "Now we sample instead from a normal distribution. For this we need to specify the mean and standard deviation of the distribution we want to sample from, I choose mean=50 and std=10 in the example."
+    "Now we sample instead from a normal distribution. For this we need to specify the mean and standard deviation of the distribution we want to sample from, I choose mean=50 and std=15 in the example."
    ]
   },
   {
