--- a/advanced_python/introduction_and_tutorials/tutorial_2_pandas_intro.ipynb
+++ b/advanced_python/introduction_and_tutorials/tutorial_2_pandas_intro.ipynb
@@ -1065,6 +1065,13 @@
     "**TASK:** Plot the human population trends for all continents (or any set of countries/regions you prefer), using the pandas data-selection tools you just learned. You can plot multiple lines into the same plot by just executing multiple plot commands at the same time. You may need to log-transform the population size values in order to properly visualize the trends for all continents in comparison, mainly because Asia has such a large population.\n",
     "</div>\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explore the multitude of pandas options on the [official pandas page](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.html)."
+   ]
   }
  ],
  "metadata": {
