--- a/advanced_python/introduction_and_tutorials/tutorial_3_statistical_models.ipynb
+++ b/advanced_python/introduction_and_tutorials/tutorial_3_statistical_models.ipynb
@@ -30,14 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import scipy"
+    "import scipy\n",
+    "from scipy import stats"
    ]
   },
   {
