updated advanced python notebooks

--- a/advanced_python/introduction_and_tutorials/tutorial_3_statistical_models.ipynb
+++ b/advanced_python/introduction_and_tutorials/tutorial_3_statistical_models.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load the data in the file `input_files/co2_temp.txt` stored in this workshops GitHub folder."
+    "Load the data in the file `input_files/co2_temp.txt` stored in this workshops GitHub folder using the pandas library."
    ]
   },
   {
